# novo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE
res/shaders/: cube.f.glsl  cube.v.glsl  cubes.f.glsl  cubes.v.glsl  light.h  light.v.glsl  normals.f.glsl  normals.g.glsl  normals.v.glsl  plain.f.glsl  plain.v.glsl  screen.f.glsl  screen.v.glsl
src/: main.cpp
src/ext/: glm_print.h
src/novo/: app.cpp  app.h  component.h  config.h.in  exception.h  global.h  input.cpp  input.h  io.cpp  io.h  novo.cpp  novo.h  system.h  util.h  window.cpp  window.h  world.cpp  world.h
src/novo/component/: controllable.h  drawable.h  mass.h  motion.h  position.h  screen.h
src/novo/entities/: cube.cpp  cube.h  entity.cpp  entity.h  origin.cpp  origin.h  randomcubes.cpp  randomcubes.h
src/novo/gfx/: camera.cpp  camera.h  drawable.h  framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  renderer.h  screen.cpp  screen.h  shader.cpp  shader.h  window.cpp  window.h
src/novo/gfx/gl/: bindable.cpp  bindable.h  buffer.cpp  buffer.h  context.h  debug.h  framebuffer.cpp  framebuffer.h  gl.h  names.h  obj.cpp  obj.h  object.cpp  object.h  program.cpp  program.h  query.cpp  query.h  renderbuffer.cpp  renderbuffer.h  shader.cpp  shader.h  storage.cpp  storage.h  texture.cpp  texture.h  uniform.cpp  uniform.h  vertexarray.cpp  vertexarray.h
src/novo/gfx/primitives/: cuboid.h  line.h  plane.h  sphere.cpp  sphere.h
src/novo/gfx/rendering/: cuboid.cpp  cuboid.h
src/novo/io/: file.cpp  file.h
src/novo/system/: control.cpp  control.h  debugger.cpp  debugger.h  gravity.cpp  gravity.h  logger.cpp  logger.h  mover.cpp  mover.h  renderer.cpp  renderer.h
